--- a/LPGasProject/LandingPage1.html
+++ b/LPGasProject/LandingPage1.html
@@ -7,20 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LandingPage</title>
     <link rel="stylesheet" href="LandingPage1.css">
+    
 </head>
 
 <body>
     <div class="navbar">
         <a href="LandingPage1.html">Home</a>
-        <a href="#news">News</a>
+        <a href="About.html">About</a>
         <div class="dropdown">
             <button class="dropbtn">Activity
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
                 <a href="Registration.html">Registration</a>
-                <a href="#">Login</a>
-                <a href="#">Subsidy</a>
+                <a href="Login.html">Login</a>
+                <a href="Subsidy.html">Subsidy</a>
             </div>
         </div>
         <div class="Title">
@@ -33,7 +34,7 @@
     </div>
 
     <div class="Bottom_navigation">
-        <h3>Made By:</h3>
+        <h3>Liquefied Petroleum Gas</h3>
     </div>
 </body>
 
